# pgns-agent-openai

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pgns_agent_openai/: __init__.py  _adapter.py  _version.py
tests/: test_adapter.py
